ARM: Implement CONFIG_SKIP_LOWLEVEL_INIT for arm926ej-s
The TS-7800 needs to skip SDRAM initialization since it loads from
RAM, but the CPU should still be initialized to the correct state.
Thus we add an #ifdef around the call to the lowlevel_init function.

Signed-off-by: Michael Spang <mspang@csclub.uwaterloo.ca>

--- a/arch/arm/cpu/arm926ejs/at91/Makefile
+++ b/arch/arm/cpu/arm926ejs/at91/Makefile
@@ -42,7 +42,9 @@ COBJS-y	+= reset.o
 COBJS-y	+= timer.o
 
 ifndef CONFIG_SKIP_CPU_INIT_CRIT
+ifndef CONFIG_SKIP_LOWLEVEL_INIT
 SOBJS-y	:= lowlevel_init.o
+endif
 endif
 
 SRCS    := $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
